# labyrinth

./: .gitignore  CMakeLists.txt
assets/: minotaur.glb  minotaur.m3d  trophy.glb  wall.glb
examples/: custom_camera.cpp  sound_ex.cpp  sounds.cpp
includes/: maze.h  minotaur.h  rcamera.h  rlights.h  sound.h
resources/shaders/glsl100/: lighting.fs
resources/shaders/glsl330/: lighting.fs
src/: main.cpp  maze.cpp  minotaur.cpp  sound.cpp
web/: Makefile  minshell.html
